after correct display of delet button and aligned modal-content2

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -21,7 +21,7 @@ blockquote,
 pre,
 a,
 abbr,
-acronym,
+acronym,a
 address,
 big,
 cite,
@@ -191,6 +191,10 @@ li:hover {
 	color: #B1663C;
 }
 
+#logout {
+	font-size: 1em;	
+}
+
 #introduction {
 	display: flex;
 	align-items: center;
@@ -216,10 +220,11 @@ li:hover {
 
 #introduction p {
 	margin-bottom: 0.5em;
+	width: 100%;
 }
 
 .gallery {
-	width: 100%;
+	width: 95%;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-column-gap: 20px;
@@ -406,7 +411,7 @@ footer nav ul {
 	padding: 50px 80px 30px 100px;
 	border-radius: 10px;
 	width: 630;
-	height: 688px;
+	height: auto;
 }
 
 #close-button {
@@ -434,12 +439,20 @@ h3 {
 }
 
 .modalgallery img {
-	width: 90px;
+	width: 77px;
 	height: 120px;
 }
 
-.hr {
-	border-top: 1px solid lightgrey;
+.modal-content hr {
+	border: 1px solid lightgrey;
+	margin: 0px;
+	width: 420px;
+}
+
+.modal-content2 hr {
+	border: 1px solid lightgrey;
+	margin: 0px;
+	width: 420px;
 }
 
 #addphoto {
@@ -457,7 +470,9 @@ h3 {
 
 figure {
 	position: relative;
+	width: fit-content;
 }
+
 #arrow-back {
 	color: black;
 	background-color: white;
@@ -465,15 +480,17 @@ figure {
 	font-weight: 700;
 }
 
-.material-symbols-outlined {
+.delete-icon {
 	position: absolute;
+	top: 5px;
+	right: 5px;
 	color: white;
-	padding: 2px;
 	background-color: black;
 	border-radius: 3px;
-	font-size: 15px;
+	padding: 2px;
+	font-size: 14px;
 	cursor: pointer;
-	display: inline-block;
+	z-index: 2;
 }
 
 /* modal 2 starts from here */
@@ -505,16 +522,15 @@ figure {
 	padding: 5px 20px;
 	cursor: pointer;
 	margin: 40px 80px 30px 150px;
-	
 }
 
 #drop-area {
 	text-align: center;
-	width: 50%;
 	width: 420px;
 	height: 170px;
 	background: rgb(232, 241, 246, 1);
 	margin-bottom: 40px;
+	margin-right: auto;
 }
 
 #img-view {
@@ -523,11 +539,11 @@ figure {
 }
 
 .img-view img {
-	margin-top: 10px;
-	width: 76px;
-	height: 76px;
+	width: 140px;
+	height:170px;
 	margin-bottom: 30px;
 }
+
 #addphoto2 {
 	font-family: 'Work Sans';
 	font-weight: 500;
@@ -541,7 +557,7 @@ figure {
 }
 
 #uploadphoto {
-	display:flex;
+	display: flex;
 	flex-direction: column;
 	text-align: left;
 	margin-top: 30px;
@@ -553,22 +569,24 @@ figure {
 	font-family: 'Work Sans';
 	font-weight: 400;
 	font-size: 10px;
-	color: rgba(68, 68, 68,1);
+	color: rgba(68, 68, 68, 1);
 	margin-top: 5px;
 	background-position: center;
 	background-size: cover;
+
 }
 
 .info-area {
 	display: flex;
 	flex-direction: column;
-	margin-left: 50px;
-	padding-left: 20px;
+	width: 420px;
+	height: 170px;
+	margin-bottom: 40px;
+	margin-right: auto;
 }
 
 #title {
-	height: 50px;
-	width: 420px;
+	height: 51px;
 	font-size: 1.2em;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.03);
@@ -577,13 +595,10 @@ figure {
 
 #category {
 	height: 50px;
-	width: 420px;
 	font-size: 1.2em;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.03);
-	margin-bottom: 40px;
 }
-
 
 #validate {
 	font-family: 'Syne';
@@ -595,12 +610,13 @@ figure {
 	padding: 10px 25px;
 	cursor: pointer;
 	margin: 40px 80px 30px 150px;
-	
+
 }
 
 .hidden {
 	display: none;
 }
+
 .visible {
 	display: block;
 }
